# ninja_solver

./: .gitignore  CMakeLists.txt  Makefile  README.md
game/: Card.cpp  Card.h  Deck.cpp  Deck.h  HandEvaluation.cpp  HandEvaluation.h
solver/core/: Board.cpp  Board.h  CardAdapter.cpp  CardAdapter.h  CardSet.h  Hand.h  HandRanking.cpp  HandRanking.h  Range.cpp  Range.h  Types.h
tests/: HandEvaluation_test.cpp
tests/solver/: test_core.cpp
